# sentry-mcp-cli

./: .env.example  .gitignore  README.md  pyproject.toml
src/sentry_cli/: __main__.py  main.py
src/sentry_cli/config/: settings.py
src/sentry_cli/mcp/: connector.py
